Fixed linting error